bugfix - fix text of about_page overflow & hidden behind pages when window resizes from small to big after toggleContent show up

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -567,6 +567,10 @@ div.container h1{
 	padding: 5px 0;
 }
 
+div.container h2{
+	margin: 0;
+}
+
 div.container ul {
 	margin: auto;
 	height: 100%;
